@@ -1,0 +1,158 @@
+package pf::SNMP::Ruckus;
+
+=head1 NAME
+
+pf::SNMP::Ruckus
+
+=head1 SYNOPSIS
+
+The pf::SNMP::Ruckus module implements an object oriented interface to 
+manage Ruckus Wireless Controllers
+
+=head1 STATUS
+
+Developed and tested on ZoneDirector 1100 running firmware 9.3.0.0 build 83
+
+=over
+
+=item Supports
+
+=over
+
+=item Deauthentication with RADIUS Disconnect (RFC3576)
+
+=back
+
+=back
+
+=head1 BUGS AND LIMITATIONS
+
+=over
+
+No Dynamic VLAN assigments using Mac Authentication.  The module support for mac-auth is disabled for now.
+
+=back
+
+=cut
+
+use strict;
+use warnings;
+use diagnostics;
+
+use base ('pf::SNMP');
+use Log::Log4perl;
+
+use pf::accounting qw(node_accounting_dynauth_attr);
+use pf::config;
+use pf::util;
+
+=head1 SUBROUTINES
+
+=over
+
+=cut
+
+# CAPABILITIES
+# access technology supported
+sub supportsWirelessDot1x { return $TRUE; }
+sub supportsWirelessMacAuth { return $FALSE; }
+
+=item getVersion
+
+obtain image version information from switch
+
+=cut
+sub getVersion {
+    my ($this)       = @_;
+    my $oid_ruckusVer = '1.3.6.1.4.1.25053.1.2.1.1.1.1.18';
+    my $logger       = Log::Log4perl::get_logger( ref($this) );
+    if ( !$this->connectRead() ) {
+        return '';
+    }
+    $logger->trace("SNMP get_request for sysDescr: $oid_ruckusVer");
+
+    # sysDescr sample output:
+    # 9.3.0.0 build 83
+
+    my $result = $this->{_sessionRead}->get_request( -varbindlist => [$oid_ruckusVer] );
+    if (defined($result)) {
+        return $result->{$oid_ruckusVer};
+    }
+ 
+    # none of the above worked
+    $logger->warn("unable to fetch version information");
+}
+
+=item parseTrap
+
+All traps ignored
+
+=cut
+sub parseTrap {
+    my ( $this, $trapString ) = @_;
+    my $trapHashRef;
+    my $logger = Log::Log4perl::get_logger( ref($this) );
+
+    $logger->debug("trap ignored, not useful for wireless controller");
+    $trapHashRef->{'trapType'} = 'unknown';
+
+    return $trapHashRef;
+}
+
+=item deauthenticateMac
+
+De-authenticate a MAC address from wireless network (including 802.1x).
+
+New implementation using RADIUS Disconnect-Request.
+
+=cut
+sub deauthenticateMac {
+    my ( $self, $mac, $is_dot1x ) = @_;
+    my $logger = Log::Log4perl::get_logger( ref($self) );
+
+    if ( !$self->isProductionMode() ) {
+        $logger->info("not in production mode... we won't perform deauthentication");
+        return 1;
+    }
+    
+    #Fetching the acct-session-id
+    my $dynauth = node_accounting_dynauth_attr($mac);
+
+    $logger->debug("deauthenticate $mac using RADIUS Disconnect-Request deauth method");
+    return $self->radiusDisconnect($mac,$dynauth->{'acctsessionid'},$dynauth->{'username'});
+}
+
+=back
+
+=head1 AUTHOR
+
+Francois Gaudreault <fgaudreault@inverse.ca>
+
+=head1 COPYRIGHT
+
+Copyright (C) 2012 Inverse inc.
+
+=head1 LICENSE
+
+This program is free software; you can redistribute it and/or
+modify it under the terms of the GNU General Public License
+as published by the Free Software Foundation; either version 2
+of the License, or (at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program; if not, write to the Free Software
+Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301,
+USA.
+
+=cut
+
+1;
+
+# vim: set shiftwidth=4:
+# vim: set expandtab:
+# vim: set backspace=indent,eol,start:
